--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+package-lock.json
+dist/
+node_modules
 /.pnp
 .pnp.js
 
@@ -12,7 +14,18 @@
 /build
 
 # misc
+# Editors
+.vscode/
+.idea/
+
+# Vagrant
+.vagrant/
+
+# Mac/OSX
 .DS_Store
+
+# Windows
+Thumbs.db
 .env.local
 .env.development.local
 .env.test.local
