--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.1.0",
-    "next": "13.4.13",
+    "next": "^13.4.19",
     "next-themes": "^0.2.1",
     "postcss": "8.4.27",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-tools": "^0.13.3",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
     "typescript": "5.0.4"
