--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nextui-org/button": "2.0.9",
+    "@nextui-org/button": "^2.0.21",
     "@nextui-org/code": "2.0.7",
     "@nextui-org/input": "2.0.10",
     "@nextui-org/kbd": "2.0.8",
-    "@nextui-org/link": "2.0.9",
+    "@nextui-org/link": "^2.0.9",
     "@nextui-org/navbar": "2.0.9",
-    "@nextui-org/react": "^2.1.7",
+    "@nextui-org/react": "^2.1.13",
     "@nextui-org/snippet": "2.0.10",
     "@nextui-org/switch": "2.0.9",
     "@nextui-org/system": "2.0.5",
-    "@nextui-org/theme": "2.0.4",
+    "@nextui-org/theme": "^2.0.4",
     "@react-aria/ssr": "^3.7.1",
     "@react-aria/visually-hidden": "^3.8.3",
     "@types/node": "20.4.9",
@@ -31,15 +31,16 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.1.0",
-    "next": "^13.4.19",
+    "next": "^13.5.3",
     "next-themes": "^0.2.1",
+    "next-ui": "^0.9.0",
     "postcss": "8.4.27",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-tools": "^0.13.3",
     "tailwind-variants": "^0.1.13",
     "tailwindcss": "3.3.3",
-    "typescript": "5.0.4"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/next": "^9.0.0"
