--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.1.0",
-    "next": "^13.5.3",
+    "next": "^13.3.4",
     "next-themes": "^0.2.1",
     "next-ui": "^0.9.0",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-tools": "^0.13.3",
