--- a/.github/workflows/docker-build-push.yaml
+++ b/.github/workflows/docker-build-push.yaml
@@ -34,6 +34,9 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: ./Dockerfile_adapters
+          file: ./dockerfile_ui
           push: true
           tags: pravnreddy429/findr_ui:v0
+
+
+          
