--- a/dockerfile_ui
+++ b/dockerfile_ui
@@ -1,23 +1,32 @@
-# Use an official Node.js image as the base image
-FROM node:14-alpine
+# Use an official Node.js runtime as a parent image
+FROM node:14-alpine as builder
 
-# Set the working directory inside the container
+# Set the working directory to /app
 WORKDIR /app
 
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
-# Install project dependencies
+# Install dependencies
 RUN npm install
 
-# Copy the rest of the application code to the working directory
+# Copy the content of the local src directory to the working directory
 COPY . .
 
-# Build the React app (assumes you have a build script in your package.json)
+# Build the React app
 RUN npm run build
 
-# Expose port 80 for the web server to listen on
+# Use a smaller base image for the production build
+FROM nginx:alpine
+
+# Set the working directory to /usr/share/nginx/html
+WORKDIR /usr/share/nginx/html
+
+# Copy the built app from the builder stage
+COPY --from=builder /app/build .
+
+# Expose port 80
 EXPOSE 80
 
-# Command to run the web server when the container starts
-CMD ["npm", "start"]
+# Start Nginx to serve the application
+CMD ["nginx", "-g", "daemon off;"]
