--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.9"
+    "yup": "^0.32.9",
+    "@babel/plugin-proposal-private-property-in-object": "7.14.0"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
