--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-REACT_APP_NAME=FINDR
+REACT_APP_NAME=FINDR (Prod)
 REACT_APP_CONTACT_MAIL=m6v3l9@gmail.com
 REACT_APP_SOURCE_LINK=https://github.com/DISHDevEx/findr-orchestrator
 REACT_APP_SUPPORT_LINK=https://github.com/DISHDevEx/findr
