--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.9",
-    "@babel/plugin-proposal-private-property-in-object": "7.14.0"
+    "@babel/plugin-proposal-private-property-in-object": "7.14.0",
+    "yarn": "1.22.21"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
