--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "homepage": "https://DISHDevEx.github.io/findr-ui",
   "license": "MIT",
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "7.14.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^5.0.0-alpha.35",
     "@material-ui/icons": "^5.0.0-alpha.35",
     "@material-ui/lab": "5.0.0-alpha.35",
+    "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.14.16",
     "@mui/joy": "^5.0.0-beta.17",
     "@mui/material": "^5.14.17",
@@ -44,8 +46,7 @@
     "source-map-explorer": "^2.5.2",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "yup": "^0.32.9",
-    "@babel/plugin-proposal-private-property-in-object": "7.14.0"
+    "yup": "^0.32.9"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
