--- a/.env.production
+++ b/.env.production
@@ -4,3 +4,4 @@ REACT_APP_SOURCE_LINK=https://github.com/DISHDevEx/findr-orchestrator
 REACT_APP_SUPPORT_LINK=https://github.com/DISHDevEx/findr
 REACT_APP_GA_TRACKING_ID=
 REACT_APP_SENTRY_DSN=
+REACT_APP_ORACLE_URL="http://a05259ad89ee04b01a459befbd933615-1815840413.us-east-1.elb.amazonaws.com:9000"
