--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "axios": "^0.21.1",
+    "axios-error": "^1.0.4",
     "axios-mock-adapter": "^1.19.0",
     "date-fns": "^2.19.0",
     "env-cmd": "^10.1.0",
@@ -50,13 +51,13 @@
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "build": "PORT=7000 react-scripts build",
+    "build": "PORT=7001 react-scripts build",
     "build:staging": "env-cmd -f .env.staging npm run build",
     "build:production": "env-cmd -f .env.production npm run build",
     "predeploy": "yarn run build:production",
     "deploy": "gh-pages -d build",
-    "start": "PORT=7000 react-scripts start",
-    "test": "PORT=7000 react-scripts test"
+    "start": "PORT=7001 react-scripts start",
+    "test": "PORT=7001 react-scripts test"
   },
   "eslintConfig": {
     "extends": [
