--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0-alpha",
   "description": "Free and open-source admin application made with React",
   "author": "DishDevEx <mss@gmail.com>",
-  "homepage": "https://DISHDevEx.github.io/findr-ui",
+  "homepage": "https://DISHDevEx.github.io/findr",
   "license": "MIT",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.14.0",
@@ -30,7 +30,7 @@
     "date-fns": "^2.19.0",
     "env-cmd": "^10.1.0",
     "formik": "^2.2.6",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^6.1.1",
     "history": "^5.0.0",
     "i18next": "^20.1.0",
     "i18next-browser-languagedetector": "^6.1.0",
