--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-config-next": "13.4.4",
     "framer-motion": "^10.16.2",
     "intl-messageformat": "^10.1.0",
-    "next": "^13.3.4",
+    "next": "^13.4.20-canary.13",
     "next-themes": "^0.2.1",
     "next-ui": "^0.9.0",
     "postcss": "^8.4.31",
